topview changed to view
focus on a div(view) when load a page,  and breadcrumb menus for ads and
campaigns corrected

--- a/public/app/partials/profile/details/home.html
+++ b/public/app/partials/profile/details/home.html
@@ -121,7 +121,7 @@
     </div>
 
 </div>
-<div class="col-md-12" style="margin-top: 10px;" id="topview">
+<div class="col-md-12" style="margin-top: 10px;" id="view">
     <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
         <li><a href="#home">Home</a> <span class="divider"></span></li>
         <li><a href="#profile/myprofile/{{userId}}">Profile</a></li>
