--- a/public/app/partials/evezplace/browse/classifieds/browse.html
+++ b/public/app/partials/evezplace/browse/classifieds/browse.html
@@ -49,7 +49,7 @@
                                         <h5 style="padding: 10px">{{item.title}}</h5>
                                     </div>
                                     <div class="col-xs-6">
-                                        <a href="#classifieds/{{item.id}}/marketplace" class="pull-right" style="color: #ffffff; margin-top: 16px; margin-right: 5px">show details <span class="fa fa-chevron-right"></span></a>
+                                        <a href="#classifieds/{{item.id}}/marketplace/view" class="pull-right" style="color: #ffffff; margin-top: 16px; margin-right: 5px">show details <span class="fa fa-chevron-right"></span></a>
                                     </div>
                                 </div>
 
