--- a/public/app/partials/profile/myBlog-details.html
+++ b/public/app/partials/profile/myBlog-details.html
@@ -144,7 +144,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-12" id="topview">
+        <div class="col-md-12" id="view">
             <h3>About Me</h3>
 
             <p style="text-align:justify;padding-bottom:10px;">{{ aboutme }}</p>
