--- a/public/app/partials/profile/mylisting.html
+++ b/public/app/partials/profile/mylisting.html
@@ -125,7 +125,7 @@
                 </div>
             </div>
 
-            <div class="col-md-12"  id="topview">
+            <div class="col-md-12"  id="view">
                 <h3>About Me</h3>
                 <p style="text-align:justify;padding-bottom:10px;">{{ aboutme }}</p>
             </div>
@@ -188,7 +188,7 @@
                                         <div class="store-browse-title">
                                             <div class="row">
                                                 <div class="col-xs-6">
-                                                    <a href="#classifieds/{{item.id}}/profile"  style="color: #ffffff;"><h5 style="padding: 10px">{{item.title}}</h5></a>
+                                                    <a href="#classifieds/{{item.id}}/profile/view"  style="color: #ffffff;"><h5 style="padding: 10px">{{item.title}}</h5></a>
                                                 </div>
                                                 <div class="col-xs-6" ng-if="currentUserId == loggedInUserId">
                                                     <a href="#classified/{{item.id}}/manage/classified_type" class="pull-right" style="color: #ffffff; margin-top: 16px; margin-right: 5px">Manage Ads & Campaigns<span class="fa fa-chevron-right"></span></a>
