--- a/public/app/partials/admin/events.html
+++ b/public/app/partials/admin/events.html
@@ -20,7 +20,7 @@
                        <div class="table-responsive" ng-controller="eventlists" ng-cloak="">
                 <table ng-table="eventAdminTableParams" template-pagination="custom/pager" class="table table-bordred table-striped">
 
-                            <tr ng-repeat="event in $data">
+                            <tr ng-repeat="event in events">
                                 <td data-title="''">
                                     <img src="{{imageUrl}}{{event.event_image.large_image_url}}" alt=""
                                          class="img-responsive img-thumbnail">
