admin - blog,event,forum updated

--- a/public/app/partials/admin/events.html
+++ b/public/app/partials/admin/events.html
@@ -44,7 +44,7 @@
                                     <div class="checkbox checkbox-primary">
                                         <input type="checkbox"
                                                id="{{event.id}}"
-                                               ng-checked="event.trending.is_show_evezplace"
+                                               ng-checked="event.trending.is_show_evezplace == 1"
                                                ng-click="showInEvezplaceDialog(event)"/>
                                         <label for="{{event.id}}"></label>
                                     </div>
