--- a/public/app/partials/payment/onlyOnline.html
+++ b/public/app/partials/payment/onlyOnline.html
@@ -10,7 +10,7 @@
                         </div>          
                     </div>
 
-                    <div class="col-md-6 col-xs-12" ng-show="PayOnline" ng-include='"partials/stripe/stripe.html"'>
+                    <div class="col-md-6 col-xs-12" ng-show="PayOnline" ng-include='"partials/payment/stripe/stripe.html"'>
                                                     
                     </div>
 
