--- a/public/app/partials/payment/allPayment.html
+++ b/public/app/partials/payment/allPayment.html
@@ -68,7 +68,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-6 col-xs-12" ng-show="PayOnline" ng-include='"partials/stripe/stripe.html"'>
+                    <div class="col-md-6 col-xs-12" ng-show="PayOnline" ng-include='"partials/payment/stripe/stripe.html"'>
                                                     
                     </div>
 
