Breadcrumb changes done

--- a/public/app/partials/evezplace/browse/classifieds/browse.html
+++ b/public/app/partials/evezplace/browse/classifieds/browse.html
@@ -2,7 +2,7 @@
     <ul class="breadcrumb" style="background: transparent; padding-left: 0px">
         <li><a href="#home">Home</a> <span class="divider"></span></li>
         <li><a href="#evezplace">Marketplace</a></li>
-        <li class="active">Browse Stores</li>
+        <li class="active">Browse Ads & Campaigns</li>
     </ul>
 
     <div class="row" style="margin-bottom: 40px">
