Manage mysite changed to create / edit profile
Create / edit profile(depth profile) changes made in navigation menu
bar.

--- a/public/app/partials/profile/details/enhance.html
+++ b/public/app/partials/profile/details/enhance.html
@@ -6,7 +6,7 @@
                 <a href="#profile/{{userId}}" ng-class="{ active: isActive('/profile')}">Mysite</a>
             </li>
             <li>
-                <a href="#profile/{{userId}}/personalinfo" class="{{isActive[1]}}">Manage Mysite</a>
+                <a href="#profile/{{userId}}/personalinfo" class="{{isActive[1]}}">Create / Edit Profile</a>
             </li>
             <li ng-class="{ active: isActive('/explore')}">
                 <!-- Template which needs to be shown on click -->
