--- a/public/app/partials/profile/details/home.html
+++ b/public/app/partials/profile/details/home.html
@@ -6,7 +6,7 @@
                 <a href="#profile/myprofile/{{userId}}" class="{{isActive[0]}}" ng-class="{ active: isActive('/profile')}">Mysite</a>
             </li>
             <li id="step10"  data-toggle="tab" data-slide-to="9">
-                <a href="#profile/{{userId}}/personalinfo" class="{{isActive[1]}}">Manage Mysite</a>
+                <a href="#profile/{{userId}}/personalinfo" class="{{isActive[1]}}">Create / Edit Profile</a>
             </li>
             <li id="step11"  data-toggle="tab" data-slide-to="10" ng-class="{ active: isActive('/explore')}">
                 <!-- Template which needs to be shown on click -->
