Browse stores, ads & camp - updated
fixed - when browse stores, ads & campaigns the negative msg(no stores
exist in this category) loading initially.

--- a/public/app/partials/evezplace/browse/store/browse.html
+++ b/public/app/partials/evezplace/browse/store/browse.html
@@ -86,7 +86,7 @@
                                 ng-change="pageChanged()">
                 </uib-pagination>
             </div>
-            <div class="empty-section text-center" ng-if="browseItems.length == 0">
+            <div class="empty-section text-center" ng-show="browseItems.length == 0">
                 <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
 
                 <h3 style="font-weight: 200">No stores exist under this category!</h3>
