--- a/public/app/partials/evezplace/browse/classifieds/browse.html
+++ b/public/app/partials/evezplace/browse/classifieds/browse.html
@@ -73,7 +73,7 @@
                                 ng-change="pageChanged()">
                 </uib-pagination>
             </div>
-            <div class="empty-section text-center" ng-if="browseItems.length == 0">
+            <div class="empty-section text-center" ng-show="browseItems.length == 0">
                 <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
 
                 <h3 style="font-weight: 200">We can't seem to find any specials for this category around here</h3>
