--- a/public/app/partials/payment/allPayment.html
+++ b/public/app/partials/payment/allPayment.html
@@ -60,7 +60,7 @@
                             </label>
                             <label>
                             Date
-                                <input date-range-picker options="{format: 'YYYY/MMM/DD', timePicker: false, singleDatePicker: true, minDate: date}" id="classifiedDuration" class="form-control date-picker" type="text" ng-model="orderData.chequeDate" style="font-weight: 600"/>
+                                <input date-range-picker options="{format: 'YYYY/MMM/DD', timePicker: false, singleDatePicker: true, minDate: date}" id="classifiedDuration" class="form-control date-picker" type="text" ng-model="orderData.chequeDate" style="font-weight: 600" readonly/>
                             </label>
                         </div>
                         <div class="col-md-12 col-xs-12">
@@ -88,35 +88,34 @@
                             <input type="hidden" name="hash"  ng-value="encrypttext"/>
                             <input type="hidden" name="txnid"  ng-value="transactions" />
                             
-                             <input type="hidden" name="orders" value="orderData" />
                             <input type="hidden" name="amount"  ng-value="orderAmount" />
-                            <input type="hidden" name="productinfo"  ng-value="productInfo" />
+                            <input type="hidden" name="productinfo" ng-value="productInfo" />
                             <input type="hidden" name="surl"  ng-value="surl" />
                             <input type="hidden" name="furl"  ng-value="furl" />
+                            <input type="hidden" name="curl"  ng-value="curl" />
                             <input type="hidden" name="firstname"  ng-value="orderData.buyer.name" />
+                            <input type="hidden" name="lastname"  ng-value="" />
                             <input type="hidden" name="email"  ng-value="orderData.buyer.email" />
-                            <input type="hidden" name="phone"  ng-value="orderData.buyer.phone" />
+                            <input type="hidden" name="phone"  ng-value="orderData.phone" />
                             <input type="hidden" name="service_provider" value="payu_paisa" />
 
-                            <input name="lastname" id="lastname" type="hidden" ng-value="orderData.buyer.code" />
-                            <input name="curl" ng-value="curl" type="hidden"/>
-                            <input name="address1" type="hidden" ng-value="" />
+                            <input name="address1" type="hidden" ng-value="orderData.checkOutType" />
                             <input name="address2" type="hidden" ng-value="" />
                             <input name="city" type="hidden" ng-value="" />
-                            <input name="state" type="hidden" ng-value="" />
+                            <input name="state" type="hidden" ng-value="orderData.checkOutType" />
                             <input name="country" type="hidden" ng-value="" />
-                            <input name="zipcode" type="hidden" ng-value="" />
+                            <input name="zipcode" type="hidden" ng-value="storeId" />
                             <input name="udf1" type="hidden" ng-value="" />
                             <input name="udf2" type="hidden" ng-value="" />
                             <input name="udf3" type="hidden" ng-value="" />
                             <input name="udf4" type="hidden" ng-value="" />
                             <input name="udf5" type="hidden" ng-value="" />
-                            <input type="submit" class="btn btn-primary btn-block" value="Pay Through PayU Money" style="margin-top:10px;margin-bottom:10px;"/>
+                            <input type="submit" class="btn btn-primary btn-block" ng-click="payuSubmit($event)" value="Pay Through PayU Money" style="margin-top:10px;margin-bottom:10px;"/>
                         </form>
                     </div>
 
                     <div class="col-md-3 col-xs-12" style="background-color: #F6F6F6;">
                         <h4 class="text-center" style="color: #e50880;">Total Amount</h4>
-                        <h4 class="text-center" style="color:#57C5A0;">&#x20b9;{{totalPrice}}</h4>
+                        <h4 class="text-center" style="color:#57C5A0;">&#x20b9;{{total_price}}</h4>
                     </div>
                 
