--- a/public/app/partials/evezplace/browse/store/place-order.html
+++ b/public/app/partials/evezplace/browse/store/place-order.html
@@ -69,7 +69,7 @@ box-shadow: 0px 0px 5px 4px rgba(0,0,0,0.24);
     </div>
 </div>
 
-<div style="margin:0 auto;width:80%;" ng-if="storeId">
+<div style="margin:0 auto;width:80%;" ng-if="storeId && !isShoppingCartEmpty">
 <div class="col-md-12 col-xs-12 no-padding shopping-cart-checkout text-align:center;" style="margin-bottom: 20px">
     <!-- ng-if="!isShoppingCartEmpty" -->
     <div class="col-md-12 col-xs-12 no-padding">
@@ -110,7 +110,7 @@ box-shadow: 0px 0px 5px 4px rgba(0,0,0,0.24);
                     <input type="email"  ng-model="orderData.buyer.email" placeholder="Email" class="col-md-6 col-xs-12" required/>
                 </div>
                 <div class="col-md-8 col-xs-8" style="margin-top: 5px">
-                    <input type="text"  ng-model="orderData.buyer.phone" placeholder="Phone" class="col-md-6 col-xs-12" required/>
+                    <input type="number" minlength="6" maxlength="13" ng-model="orderData.buyer.phone" placeholder="Phone" class="col-md-6 col-xs-12" required/>
                 </div>
                 <div class="col-md-8 col-xs-8" style="margin-top: 5px">
                     <input ng-if="!loggedInUser"  type="text" ng-model="orderData.buyer.code" placeholder="BuyerCode(Optional)" class="col-md-6 col-xs-12"/>
@@ -216,7 +216,7 @@ box-shadow: 0px 0px 5px 4px rgba(0,0,0,0.24);
                                            ng-model="orderData.billing_address.country" required>
                                 </div>
                                 <div class="col-md-12">
-                                    <input type="text" ng-model="orderData.billing_address.pincode"
+                                    <input type="number" minlength="4" maxlength="8" ng-model="orderData.billing_address.pincode"
                                            class="form-control" required/>
                                 </div>
                                 <div class="col-md-12">
@@ -269,7 +269,7 @@ box-shadow: 0px 0px 5px 4px rgba(0,0,0,0.24);
                                            ng-model="orderData.shipping_address.country" required>
                                 </div>
                                 <div class="col-md-12">
-                                    <input type="text" class="form-control"
+                                    <input type="number" minlength="4" maxlength="8" class="form-control"
                                            ng-model="orderData.shipping_address.pincode" required/>
                                 </div>
                             </div>
