--- a/public/app/partials/profile/buyHistory.html
+++ b/public/app/partials/profile/buyHistory.html
@@ -139,7 +139,7 @@
 
         <div class="col-lg-10 col-md-10 col-sm-10 bhoechie-tab">
                 <!-- flight section -->
-                <div class="bhoechie-tab-content active" ng-controller="orderCtrl">
+                <div class="bhoechie-tab-content active" ng-controller="orderCtrl" ng-if="getBuyHistory.length > 0">
                 
                     <h2>{{htitle}}</h2>
 
